--- a/index.html
+++ b/index.html
@@ -1,46 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+        
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medidor de temperatura</title>
   </head>
   <body onload="init()">
-    <h1 id="tempLog"></h1>
+    <h1>Medidor de temperatura</h1>
 
-    <h2 style="text-align: center">Temperatura actual:</h2>
-    <button id="tempToggleButton" onclick="toggleTemp()">Apagar sensor</button>
-    <canvas class="c"> </canvas>
-  </body>
+    <div style="text-align: center">
+      <h2 id="tempLog" style="text-align: center"></h2>
 
-  <script>
-    tempOn = true;
-    websocket = new WebSocket("ws://" + window.location.hostname + ":81/");
-    websocket.onmessage = function (event) {
-      data = JSON.parse(event.data);
-      document.getElementById("tempLog").innerHTML = "Temperatura:" + data.temp;
-    };
+      <button
+        id="toggleSensorButton"
+        onclick="toggleTemp()"
+        style="text-align: center"
+      >
+        Apagar sensor
+      </button>
+    </div>
 
-    function toggleTemp() {
-      if (tempOn == true) {
-        websocket.close();
-        document.getElementById("tempLog").innerHTML = "Sensor Apagado";
-        document.getElementById("tempToggleButton").innerHTML = "Prender sensor";
+    <canvas id="tempChart"></canvas>
 
-        tempOn = false;
-      } else {
-        websocket.onmessage = function (event) {
-          data = JSON.parse(event.data);
-          document.getElementById("tempLog").innerHTML = "Temperatura:" + data.temp;
-        };
-
-        document.getElementById("tempToggleButton").innerHTML = "Apagar sensor";
-
-        tempOn = true;
-
-        //Poner
+    <script>
+      var dataPlot;
+      var maxDataPoints = 20;
+      function removeData() {
+        dataPlot.data.labels.shift();
+        dataPlot.data.datasets[0].data.shift();
       }
-    }
-  </script>
+      function addData(label, data) {
+        if (dataPlot.data.labels.length > maxDataPoints) removeData();
+        dataPlot.data.labels.push(label);
+        dataPlot.data.datasets[0].data.push(data);
+        dataPlot.update();
+      }
+
+      var tempOn = true;
+      var websocket = null;
+
+      dataPlot = new Chart(document.getElementById("tempChart"), {
+        type: "line",
+        data: {
+          labels: [],
+          datasets: [
+            {
+              data: [],
+              label: "Temperatura",
+              borderColor: "#3e95cd",
+              fill: false,
+            },
+          ],
+        },
+      });
+
+      function init() {
+        websocket = new WebSocket("ws://" + window.location.hostname + ":81/");
+        websocket.onmessage = function (event) {
+          var data = JSON.parse(event.data);
+
+          document.getElementById("tempLog").innerHTML =
+            "Temperatura:" + data.temp;
+          var today = new Date();
+          var t =
+            today.getHours() +
+            ":" +
+            today.getMinutes() +
+            ":" +
+            today.getSeconds();
+          addData(t, data.temp);
+        };
+      }
+
+      function toggleTemp() {
+        if (tempOn) {
+          websocket.close();
+          tempOn = false;
+
+          document.getElementById("tempLog").innerHTML = "Sensor apagado";
+          document.getElementById("toggleSensorButton").innerHTML =
+            "Prender sensor";
+        } else {
+          init();
+          tempOn = true;
+          document.getElementById("toggleSensorButton").innerHTML =
+            "Apagar sensor";
+        }
+      }
+    </script>
+  </body>
 </html>
